tuxedo-drivers (4.0.0) jammy; urgency=medium

  * Merge tuxedo-keyboard and tuxedo-keyboard-ite
  * Rename package
  * Rework packaging process

 -- Werner Sembach <tux@tuxedocomputers.com>  Mon, 20 Nov 2023 20:22:38 +0100

tuxedo-keyboard (3.2.14) jammy; urgency=low

  * Tweak IBPG8 TDP limits

 -- C Sandberg <tux@tuxedocomputers.com>  Thu, 16 Nov 2023 12:47:00 +0100

tuxedo-keyboard (3.2.13) jammy; urgency=low

  * Add missing IBPG8 TDP definitions

 -- C Sandberg <tux@tuxedocomputers.com>  Fri, 10 Nov 2023 16:15:00 +0100

tuxedo-keyboard (3.2.12) jammy; urgency=low

  * Polaris/Stellaris AMD Gen5 support

 -- C Sandberg <tux@tuxedocomputers.com>  Tue, 24 Oct 2023 16:23:00 +0100

tuxedo-keyboard (3.2.11) jammy; urgency=low

  * Aura Gen3 support

 -- C Sandberg <tux@tuxedocomputers.com>  Thu, 21 Sep 2023 10:18:00 +0100

tuxedo-keyboard (3.2.10) jammy; urgency=low

  * Fix build on certain systems

 -- C Sandberg <tux@tuxedocomputers.com>  Thu, 10 Aug 2023 15:40:00 +0100

tuxedo-keyboard (3.2.9) jammy; urgency=low

  * Quirks for setting missing IBP16Gen8 keyboard layouts
  * Fix IBP 16 Gen8 mk1 layout set to 14inch variant layout

 -- C Sandberg <tux@tuxedocomputers.com>  Tue, 01 Aug 2023 19:34:00 +0100

tuxedo-keyboard (3.2.8) jammy; urgency=low

  * Keyboard backlight support for IBS17Gen8 (white-only)
  * Fn backlight key support for IBS17Gen8

 -- C Sandberg <tux@tuxedocomputers.com>  Fri, 21 Jul 2023 17:04:00 +0100

tuxedo-keyboard (3.2.7) jammy; urgency=low

  * Fix for certain white kbd bl identification on boot (XA15)
  * General white-only kbd bl rework to use firmware set on Fn+brightness
    switch
  * Kernel 6.4 build compatibility fix

 -- C Sandberg <tux@tuxedocomputers.com>  Wed, 28 Jun 2023 10:02:00 +0100

tuxedo-keyboard (3.2.6) jammy; urgency=low

  * Fallback ROM ID set quirk support

 -- C Sandberg <tux@tuxedocomputers.com>  Tue, 13 Jun 2023 15:04:00 +0100

tuxedo-keyboard (3.2.5) jammy; urgency=low

  * IBP Gen8 keyboard backlight support